# diplomova-prace

./: .gitignore  README.md  literatura.tex  xdipp.sty
code/: jaccard.ipynb  podobnostni_metriky.ipynb  pyproject.toml  similarity.ipynb
dokumenty/: xprchal_zamer-dp.docx  xprchal_zamer-dp_01-05-2024.docx  Ústní-zkouška_PŘEKLAD_opraveno.docx
kapitoly/: literarni-reserse.md  uvod_a_cil.tex
latex/: .latexmkrc  csv_to_lit.py  edit.txt  index.tex  literatura.bib  literatura.tex  main.tex  watch.sh  zdroje.csv
latex/kapitoly/: code-example.tex  literarni-reserse-archive.tex  literarni-reserse.tex  uvod_a_cil.tex
latex/src/: index.tex  literatura.bib  literatura.tex
latex/src/kapitoly/: literarni-reserse.tex
latex/zotero_bridge/: Diplomka.csv  main.py
latex/zotero_bridge/ZoteroExport.app/Contents/: Info.plist  document.wflow
latex/zotero_bridge/ZoteroExport.app/Contents/MacOS/: Automator Application Stub
latex/zotero_bridge/ZoteroExport.app/Contents/_CodeSignature/: CodeResources
poznamky/: Doporučená osnova.md  Záměr diplomové práce.md  Záměr.md  Zásady pro vypracování.md  zamer.md  Úvod.md
poznamky/.obsidian/: workspace.json
poznamky/Materiály/: Informace k tématu.md
poznamky/literarni-reserse/: geodata.md
poznamky/materialy/: google-docs-historie-tematu.md
typst/: diplomka.bib  main.typ
