[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "spacy>=3.8.4",
    "textdistance>=4.6.3",
    "tokenizers>=0.21.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
